# LightCA

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LightCA.md  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: .gitignore  Dockerfile  alembic.ini  fix_cert_service.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260205_1940-ed87fcaaacad_initial_database_schema.py
backend/app/: auth.py  config.py  database.py  main.py  security.py
backend/app/api/: auth.py  certificates.py  crl.py  keys.py  public.py  stats.py  templates.py
backend/app/models/: __init__.py  certificate.py  crl.py  key.py  template.py
backend/app/schemas/: auth.py  certificates.py  common.py  crl.py  keys.py  stats.py  templates.py
backend/app/services/: cert_service.py  crl_service.py  crypto_service.py  key_service.py  template_service.py
backend/app/static/js/: api.js  app.js
backend/app/templates/: base.html  dashboard.html
backend/app/templates/auth/: login.html
backend/app/templates/ca/: detail.html  list.html  tree.html
backend/app/templates/certificates/: detail.html  import.html  list.html  sign.html
backend/app/templates/components/: badges.html  copy_field.html
backend/app/templates/crl/: list.html  revocations.html
backend/app/templates/keys/: list.html
backend/app/templates/templates/: create.html  detail.html  list.html
backend/tests/: conftest.py  test_api_auth.py  test_api_certificates.py  test_api_crl.py  test_api_keys.py  test_api_public.py  test_api_stats.py  test_api_templates.py  test_main_routes.py  test_security.py
